updated web pages

--- a/conferences/TAGS24/abstracts.html
+++ b/conferences/TAGS24/abstracts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-  <title>Texas Algebraic Geometry Symposium 2022</title>
+  <title>Texas Algebraic Geometry Symposium 2024</title>
 </head><body style="background-color:#baccf0;">
 <a name="TOP"></a>
 
@@ -42,8 +42,28 @@
 <!------------------------------------------------------------------------------------------------------>
 <table border=0>
   <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><font size=+1>Giorgio Ottaviani</font></td><td>&nbsp;</td>
+    <td><a name="CD"></a><font size=+1>Chiara Damiolini</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>A gentle introduction to Conformal Blocks</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+
+Spaces of conformal blocks are naturally constructed starting from a geometric datum (a projective curve with some marked point) and a
+representation-theoretic input (a vertex algebra <i>V</i> and some <i>V</i>-modules).
+Varying the geometric data, these conformal blocks define sheaves on the moduli space of curves which satisfy particularly nice
+combinatorial and functorial properties.
+In tonight's talk I will give a gentle introduction to these objects.
+No prior knowledge of vertex algebras or moduli of curves will be required.
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><a name="GO"></a><font size=+1>Giorgio Ottaviani</font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2>The Hessian Map</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -63,7 +83,7 @@
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><font size=+1> Juanita Duque-Rosero</font></td><td>&nbsp;</td>
+    <td><a name="JDR"></a><font size=+1> Juanita Duque-Rosero</font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2> Local heights on hyperelliptic curves for quadratic Chabauty</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -84,8 +104,8 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><font size=+1> Pierrick Bousseau</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>The KSBA moduli space of log Calabi-Yau surfaces.</font></td>
+    <td><a name="PB"></a><font size=+1> Pierrick Bousseau</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>The KSBA moduli space of log Calabi-Yau surfaces</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
@@ -113,7 +133,7 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><font size=+1> Hannah Larson</font></td><td>&nbsp;</td>
+    <td><a name="HL"></a><font size=+1> Hannah Larson</font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2>Cohomology of moduli spaces of curves</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -140,25 +160,7 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><font size=+1>David Eisenbud</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>Looking inside infinite resolutions</font></td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------->
-  <tr>
-    <td colspan=2>  </td><td width=800 colspan=3>
-      Hand computation of even a few steps in an infinite minimal resolution is very slow, but with systems such as Macaulay2 one can make many
-      experiments leading to observations that I find surprising.
-      Some have become theorems, others are quite mysterious.
-      In this talk I'll describe some of the new phenomena that I and others have seen, and some of the guesses (conjectures?) that we have
-      made.
-      The new results are part of joint work with Hai Long Dao, Bernd Ulrich, Claudia Polini and others.   <br> <br>
-    </td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------->
-  <!----------------------    The next two rows are for one entry    ----------------------------------->
-  <!---------------------------------------------------------------------------------------------------->
-  <tr>
-    <td><font size=+1>Maria Fox</font></td><td>&nbsp;</td>
+    <td><a name="MF"></a><font size=+1>Maria Fox</font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2>Ekedahl-Oort and Newton Stratifications</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -178,7 +180,7 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><font size=+1>Alicia Lamarche </font></td><td>&nbsp;</td>
+    <td><a name="AL"></a><font size=+1>Alicia Lamarche </font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2>Wonderful compactifications, toric varieties, and derived categories</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -199,20 +201,18 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><font size=+1>Chiara Damiolini</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>A gentle introduction to Conformal Blocks</font></td>
+    <td><a name="DE"></a><font size=+1>David Eisenbud</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Looking inside infinite resolutions</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td colspan=2>  </td><td width=800 colspan=3>
-
-Spaces of conformal blocks are naturally constructed starting from a geometric datum (a projective curve with some marked point) and a
-representation-theoretic input (a vertex algebra <i>V</i> and some <i>V</i>-modules).
-Varying the geometric data, these conformal blocks define sheaves on the moduli space of curves which satisfy particularly nice
-combinatorial and functorial properties.
-In tonight's talk I will give a gentle introduction to these objects.
-No prior knowledge of vertex algebras or moduli of curves will be required.
-    <br> <br>
+      Hand computation of even a few steps in an infinite minimal resolution is very slow, but with systems such as Macaulay2 one can make many
+      experiments leading to observations that I find surprising.
+      Some have become theorems, others are quite mysterious.
+      In this talk I'll describe some of the new phenomena that I and others have seen, and some of the guesses (conjectures?) that we have
+      made.
+      The new results are part of joint work with Hai Long Dao, Bernd Ulrich, Claudia Polini and others.   <br> <br>
     </td>
   </tr>
 
