--- a/conferences/TAGS24/posters.html
+++ b/conferences/TAGS24/posters.html
@@ -36,10 +36,10 @@
   </tr>
 </table><br>
 <!---------------------------------------------------------------------------------------
-<b><font size=+1 color=Maroon>Winner of the poster contest:</font></b> Byengsu Yu.<br>--------------------------------->
+<b><font size=+1 color=Maroon>Winner of the poster contest:</font></b>.<br>--------------------------------->
 <!------------------------------------------------------------------------------------------------------------------------>
 <!--------------------------------------------------------------------------------------------
-<b><font size=+1 color=Maroon>Runner up: &nbsp; &nbsp; </font></b> Josu&eacute; Tonelli Cueto.---------------------------->
+<b><font size=+1 color=Maroon>Runner up: &nbsp; &nbsp; </font></b>.---------------------------->
 <!------------------------------------------------------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------------------------------------------------------>
@@ -53,8 +53,18 @@
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
-  <tr>    <td><font size=+1>Gari Lincoln Chua</font></td><td><A HREF="#GLC">abstract</A></td>
-    <td>On Stability and Denominators of <i>F</i>-pure Thresholds in Families of Diagonal Hypersurfaces</td>
+  <tr>    <td><font size=+1>Logan White</font></td><td><A HREF="#LW">abstract</A></td>
+    <td>Mirror Symmetry for Berkovich Spaces</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>    <td><font size=+1>Yeqiu Wang</font></td><td><A HREF="#YW">abstract</A></td>
+    <td>Ample cones of K3 surfaces with higher dimensional generalizations</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>    <td><font size=+1>Michail Savvas</font></td><td><A HREF="#MS">abstract</A></td>
+    <td>Moduli spaces in derived geometry</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
@@ -63,8 +73,18 @@
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
-  <tr>    <td><font size=+1>Yeqiu Wang</font></td><td><A HREF="#YW">abstract</A></td>
-    <td>TBA</td>
+  <tr>    <td><font size=+1>Jonah Robinson</font></td><td><A HREF="#JR">abstract</A></td>
+    <td>Invariants of the Dispersion Relation for Discrete Periodic Operators</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>    <td><font size=+1>Tomasz Mandziuk</font></td><td><A HREF="#TM">abstract</A></td>
+    <td>Multigraded Hilbert schemes of points in general position</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>    <td><font size=+1>Gari Lincoln Chua</font></td><td><A HREF="#GLC">abstract</A></td>
+    <td>On Stability and Denominators of <i>F</i>-pure Thresholds in Families of Diagonal Hypersurfaces</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
@@ -73,25 +93,6 @@
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
-  <tr>    <td><font size=+1>Jonah Robinson</font></td><td><A HREF="#JR">abstract</A></td>
-    <td>Invariants of the Dispersion Relation for Discrete Periodic Operators</td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------------------------------------->
-  <tr>    <td><font size=+1>Logan White</font></td><td><A HREF="#LW">abstract</A></td>
-    <td>Mirror Symmetry for Berkovich Spaces</td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------------------------->
-  <tr>    <td><font size=+1>Michail Savvas</font></td><td><A HREF="#MS">abstract</A></td>
-    <td>Moduli spaces in derived geometry</td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------------------------------------->
-  <tr>    <td><font size=+1></font></td><td><A HREF="#">abstract</A></td>
-    <td></td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------------------------->
 </table>
 <!------------------------------------------------------------------------------------------------------------------------>
 
@@ -99,21 +100,52 @@
 <!------------------------------------------------------------------------------------------------------------------------>
 <h3><font color=Maroon>Abstracts</font></h3>
 <!------------------------------------------------------------------------------------------------------------------------>
-  <table  border=1>
+  <table  border=0>
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
-    <td><A NAME=""><font size=+1></font></td><td>&nbsp;</td>
-    <td></td>
+    <td><A NAME="SZ"><font size=+1>Suhan Zhong</font></td><td>&nbsp;</td>
+    <td>Polynomial lower approximations for two-stage stochastic optimization</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr><td colspan=3> <b>Abstract:</b>
+   It is a challenging problem to find global optimal solutions of nonconvex two-stage stochastic programs. We propose to find an efficient
+   polynomial lower bound function of the recourse function and solve the two-stage stochastic program as polynomial optimization. Such
+      polynomial lower bound functions can be solved by linear conic optimization.
+    </td>
+   </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3><hr></td></tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><A NAME="LW"><font size=+1>Logan White</font></td><td>&nbsp;</td>
+    <td>Mirror Symmetry for Berkovich Spaces</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3> <b>Abstract:</b>
+      In joint work with Sean Keel and Tony Yue Yu, we construct mirror families to snc partial compactifications of nonarchimedean analytic
+      spaces which satisfy certain convexity and log Calabi-Yau type conditions.
+      Our construction greatly expands the range of the Keel-Yu mirror program, with one important application being the mirror to a formal
+      deformation.  
    </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3><hr></td></tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
-    <td><A NAME="MS">Michail Savvas<font size=+1></font></td><td>&nbsp;</td>
+    <td><A NAME="YW"><font size=+1>Yeqiu Wang</font></td><td>&nbsp;</td>
+    <td>Ample cones of K3 surfaces with higher dimensional generalizations</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3> <b>Abstract:</b>
+      This poster discusses ample cones of K3 surfaces, their Hilbert schemes, and birational modifications.
+   </td>
+   </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3><hr></td></tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><A NAME="MS"><font size=+1>Michail Savvas</font></td><td>&nbsp;</td>
     <td>Moduli spaces in derived geometry</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
@@ -127,20 +159,25 @@
    </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3><hr></td></tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
-    <td><A NAME="LW">Logan White<font size=+1></font></td><td>&nbsp;</td>
-    <td>Mirror Symmetry for Berkovich Spaces</td>
+    <td><A NAME="GFR"><font size=+1>Filip Rupniewski</font></td><td>&nbsp;</td>
+    <td>Relation between subrank and border subrank</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr><td colspan=3> <b>Abstract:</b>
-      In joint work with Sean Keel and Tony Yue Yu, we construct mirror families to snc partial compactifications of nonarchimedean analytic
-      spaces which satisfy certain convexity and log Calabi-Yau type conditions.
-      Our construction greatly expands the range of the Keel-Yu mirror program, with one important application being the mirror to a formal
-      deformation.  
+      To measure tensor complexity, multiple notions of ranks were introduced, such as tensor rank and subrank.
+      Tensors with a high value (subrank) and low cost (tensor rank) are very desirable.
+      They are used (in laser method) to construct the fastest algorithms for matrix multiplication.
+      The poster discusses the relationship between subrank and its border version, as well as their various properties such as the
+      non-additivity of (border) subrank and the growth rate of generic (border) subrank. 
+      Based on the joint work with Benjamin Biaggi, Chia-Yu Chang and Jan Draisma
+      (<a href="https://arxiv.org/abs/2402.10674">https://arxiv.org/abs/2402.10674</a>).
    </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3><hr></td></tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
     <td><A NAME="JR"><font size=+1>Jonah Robinson</font></td><td>&nbsp;</td>
@@ -159,43 +196,23 @@
    </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3><hr></td></tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
-    <td><A NAME="CJ">C.J. Bott<font size=+1></font></td><td>&nbsp;</td>
-    <td>Galois groups of Enumerative Problems</td>
+    <td><A NAME="TM"><font size=+1>Tomasz Mandziuk</font></td><td>&nbsp;</td>
+    <td>Multigraded Hilbert schemes of points in general position</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr><td colspan=3> <b>Abstract:</b>
+      Given a product of projective spaces <i>X</i> and a positive integer <i>r</i> we consider the parameter space of homogeneous ideals
+      in the coordinate ring of <i>X</i> that have the same Hilbert function as <i>r</i> points in general position in <i>X</i>.
+      We classify for which <i>X</i> and <i>r</i> the parameter space is irreducible.
+      The work is motivated by border apolarity which establishes a connection between a distinguished irreducible
+      component of the parameter space that we consider and the notion of border rank.
    </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------------------------------------->
-  <tr>
-    <td><A NAME="YW"><font size=+1>Yeqiu Wang</font></td><td>&nbsp;</td>
-    <td>TBA</td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------------------------->
-  <tr><td colspan=3> <b>Abstract:</b>
-   </td>
-   </tr>
-  <!---------------------------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------------------------->
-  <tr>
-    <td><A NAME="GFR"><font size=+1>Filip Rupniewski</font></td><td>&nbsp;</td>
-    <td>Relation between subrank and border subrank</td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------------------------->
-  <tr><td colspan=3> <b>Abstract:</b>
-      To measure tensor complexity, multiple notions of ranks were introduced, such as tensor rank and subrank.
-      Tensors with a high value (subrank) and low cost (tensor rank) are very desirable.
-      They are used (in laser method) to construct the fastest algorithms for matrix multiplication.
-      The poster discusses the relationship between subrank and its border version, as well as their various properties such as the
-      non-additivity of (border) subrank and the growth rate of generic (border) subrank. 
-      Based on the joint work with Benjamin Biaggi, Chia-Yu Chang and Jan Draisma
-      (<a href="https://arxiv.org/abs/2402.10674">https://arxiv.org/abs/2402.10674</a>).
-   </td>
-   </tr>
-  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3><hr></td></tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
     <td><A NAME="GLC"><font size=+1>Gari Lincoln Chua</font></td><td>&nbsp;</td>
@@ -214,19 +231,18 @@
     </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3><hr></td></tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
-    <td><A NAME="SZ">Suhan Zhong<font size=+1></font></td><td>&nbsp;</td>
-    <td>Polynomial lower approximations for two-stage stochastic optimization</td>
+    <td><A NAME="CJ">C.J. Bott<font size=+1></font></td><td>&nbsp;</td>
+    <td>Galois groups of Enumerative Problems</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr><td colspan=3> <b>Abstract:</b>
-   It is a challenging problem to find global optimal solutions of nonconvex two-stage stochastic programs. We propose to find an efficient
-   polynomial lower bound function of the recourse function and solve the two-stage stochastic program as polynomial optimization. Such
-      polynomial lower bound functions can be solved by linear conic optimization.
-    </td>
+   </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3><hr></td></tr>
   <!---------------------------------------------------------------------------------------------------------------------->
 </table>
  
