--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -75,7 +75,7 @@ Frank cancelled his attendance on 11 February 2024
 <!----------------------------------------------------------------------------------------------------->
 <hr>
 <!----------------------------------------------------------------------------------------------------->
-<b><a href="https://docs.google.com/forms/d/e/1FAIpQLSeMhzQd98pwn7irgiobTw0N9eSFMovc9oXRZ7ijFKPrMztfDw/viewform">Registration</a></b><br>
+<b><a href="https://docs.google.com/forms/d/e/1FAIpQLSeMhzQd98pwn7irgiobTw0N9eSFMovc9oXRZ7ijFKPrMztfDw/viewform"></a>Registration is closed</b><br>
 
 <b><a href="posters.html">Poster Session</a>:  </b> There will be a poster session for participants,
      with a prize for the best poster by a student or postdoc.<br>
@@ -93,17 +93,130 @@ early-career participants. Request this with your registration. <br>
 <b>Conference Program</b>
    &nbsp; &nbsp;  &nbsp; &nbsp; <a href="abstracts.html"><b>Abstracts</b></a><br>
 
+<table border=1 cellspacing="5">
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><th colspan=3 align=left> Friday, 5 April</th></tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td>16:00&ndash;17:00 PM</td>
+    <td>Maxson Lecture by David Eisenbud</td>
+    <td>Blocker Building 117</td>
+  </tr>
+  <!-------------------------------------------------->
+  <tr>
+    <td>17:00&ndash;17:30 PM</td>
+    <td>Arrival and Registration</td>
+    <td>Ground floor of <a href="http://wikimapia.org/6170/John-R-Blocker-Building">Blocker Building</a></td>
+  </tr>
+  <!-------------------------------------------------->
+  <tr>
+    <td>17:30&ndash;18:30 </td>
+    <td>Catered Dinner on site</td><td>TAZ Indian Restaurant</td>
+  </tr>
+  <!-------------------------------------------------->
+  <tr>
+    <td>18:30&ndash;18:35 </td>
+    <td>Opening Remarks</td><td></td>
+  </tr>
+  <!-------------------------------------------------->
+  <tr>
+    <td>18:35&ndash;19:30 </td>
+    <td>Chiara Damiolini</td><td><a href="abstracts.html#CD">A gentle introduction to Conformal Blocks</a></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><th colspan=3 align=left> Saturday, 6 April</th></tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td> 8:30&ndash;9:00</td>
+    <td>Registration and Coffee </td><td></td>
+  </tr>
+   <tr>
+    <td> 9:00&ndash;9:55</td>
+    <td> Giorgio Ottaviani</td><td><a href="abstracts.html#GO">The Hessian Map</a></td>
+  </tr>
+  <tr>
+    <td> 10:00&ndash;10:30</td>
+    <td>  Break </td><td></td>
+  </tr>
+  <tr>
+    <td> 10:30&ndash;11:30</td>
+    <td> Juanita Duque-Rosero  </td><td><a href="abstracts.html#JDR">Local heights on hyperelliptic curves for quadratic Chabauty</a></td>
+  </tr>
+  <tr>
+    <td> 11:30&ndash;11:45</td>
+    <td>  Students meet with speakers</td><td>Blocker 166</td>
+  </tr>
+   <tr>
+    <td> 11:45&ndash;14:00</td>
+    <td>  Lunch &nbsp; (put up posters)</td><td>Local Restaurants</td>
+  </tr>
+  <tr>
+    <td> 14:00&ndash;14:55</td>
+    <td> Pierrick Bousseau </td><td><a href="abstracts.html#PB">The KSBA moduli space of log Calabi-Yau surfaces</a></td>
+  </tr>
+  <tr>
+    <td> 15:00&ndash;15:30</td>
+    <td> Break </td><td></td>
+  </tr>
+  <tr>
+    <td> 15:30&ndash;16:25</td>
+    <td> Hannah Larson    </td><td><a href="abstracts.html#HL">Cohomology of moduli spaces of curves</a></td>
+  </tr>
+  <tr>
+    <td> 16:30&ndash;16:45</td>
+    <td>   Students meet with speakers </td><td></td>
+  </tr>
+  <tr>
+    <td> 16:45&ndash;18:30</td>
+    <td>  Reception and poster session </td><td></td>
+  </tr>
+  <tr>
+    <td> 19:00&mdash;  </td>
+    <td>      Dinner at local restaurant </td><td>Mo&apos;s</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><th colspan=3 align=left> Sunday, 7 April</th></tr>
+  <!---------------------------------------------------------------------------------------------------->
+   <tr>
+    <td> 8:30&ndash;9:00</td>
+   <td> Coffee </td><td></td>
+  </tr> 
+   <tr>
+    <td> 9:00&ndash;9:55</td>
+   <td> Maria Fox </td><td><a href="abstracts.html#MF">Ekedahl-Oort and Newton Stratifications</a></td>
+  </tr> 
+  <tr>
+    <td> 10:00&ndash;10:15</td>
+    <td> Break </td><td></td>
+  </tr>
+   <tr>
+    <td>  10:15&ndash;11:10</td>
+    <td> Alicia Lamarche </td><td><a href="abstracts.html#AL">Local-to-global principles for zero-cycles</a></td>
+  </tr>
+  <tr>
+    <td> 11:15&ndash;11:30</td>
+    <td> Break </td><td></td>
+  </tr>
+  <tr>
+    <td>  11:30&ndash;12:25</td>
+    <td> David Eisenbud </td><td><a href="abstracts.html#DE">Looking inside infinite resolutions</a></td>
+  </tr>
 
-While the precise schedule has not yet been determined, the following is known:<br>
-The meeting starts on April 5 after the Second Maxson Lecture, which will be delivered by David Eisenbud from 4&ndash;5 PM.<br>
-There will be one talk and a catered dinner that evening.<br>
-On Saturday, there will be four lectures, a poster session, and a conference dinner, <br>
-and the conference will continue through early afternoon on Sunday, likely finishing by 1 PM.
+  <tr>
+    <td>  12:30&ndash;12:35</td>
+    <td> Closing Remarks </td><td></td>
+  </tr>
+
+
+</table>
+
+
+
 
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<b>TAGS Steering Comittee:  </b>
+<b>TAGS Steering Committee:  </b>
 Chiara Damiolini and Bernd Siebert (UT Austin),
 Anthony V&aacute;rilly-Alvarado  and Brandon Levin (Rice University),
 Patricia Klein and Frank Sottile (Texas A&amp;M).<br>
