--- a/teaching/24.1/weeks/W12.html
+++ b/teaching/24.1/weeks/W12.html
@@ -10,12 +10,12 @@
 <!--------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------->
-    <a href="http://piazza.com/tamu/spring2022/math629/home">Piazza Class page</a>.
+    <a href="http://piazza.com/tamu/spring2024/math629/home">Piazza Class page</a>.
 <!--------------------------------------------------------->
 <HR>
 <!-------------------------------------------------------------->
 
-<font color=maroon><h3>Week 12: 11 April 2022. </h3></font>
+<font color=maroon><h3>Week 12: 3 April 2024. </h3></font>
 
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font>
@@ -23,37 +23,36 @@
   Stillwell's proclivities).
   This week, we will read about the beginnings of modern algebra, first the rise of group theory and then hypercomplex numbers.<BR><br>
 
-
-  &nbsp; &nbsp;I found the exercises in the chapter on group theory to be a bit heavy; do read the chapter to get a feeling for the development of
-  that topic and its birth in the theory of equations.
+  &nbsp; &nbsp;I found the exercises in the chapter on group theory to be a bit heavy; do read the chapter to get a feeling
+  for the development of that topic and its birth in the theory of equations.
   Despite what Stillwell says, groups and solving equations do keep coming up in mathematics and its applications.
-    I ran a conference at the <A href="https://icerm.brown.edu/">ICERM</a> on Galois groups in geometry and applications of
-    mathematics in September 2020.
+  I ran a conference at the <A href="https://icerm.brown.edu/">ICERM</a> on Galois groups in geometry and applications of
+  mathematics in September 2020.
   Stillwell is right to note that the classification of finite groups is no longer a central theme in mathematics.<BR><br>
 
-
   &nbsp; &nbsp;
-  The chapter on hypercomplex numbers shows how even if you wish something to be so, it may not be.
-  Hamilton and others wanted to find a three-dimensional system of numbers that behaved like the real numbers (one-dimensional) and also complex
-  numbers (two-dimensional).
+  The chapter on hypercomplex numbers shows how even if you wish something to be so, it may not be be true.
+  Hamilton and others wanted to find a three-dimensional system of numbers that behaved like the real numbers
+  (one-dimensional) and also complex numbers (two-dimensional).
   Instead, he found a four-dimensional system, called the quaternions, which almost behaves like the others, except that it is
   <i>noncommutative</i>.
   It is hard to overstate the importance of this discovery.
   You all know that many operations, from multuplying matrices to dressing one's self, depend upon the order in which they are applied
   (socks first and shoes second is quite different from shoes first and socks second!).
-  This noncommutativity ended up being crucial for the development of quantum mechanics, which enables, for example, a computer smaller than the size
-  of a room with the capabilities of the laptop I am typing on, not to mention the screen I am looking at, and etc.
+  This noncommutativity ended up being crucial for the development of quantum mechanics, which enables, for example, a
+  computer smaller than the size of large building with the capabilities of the laptop I am typing on, not to mention the screen I
+  am looking at, and etc. 
   Also, the unit quaternions form a multiplicative group which is equivalent to the group of rotations in <b>R</b><sup>3</sup>.
-  Consequently, every person working in computer animation uses them, and their multiplication is hard-wired into all graphics chips in
-  computers and cell phones.
-  My knowing this led to my collaborating with two applied mathematicians on a paper inspired by a problem in determining the structure of a
-  certain class of proteins, and then to one of my more influential papers in the past decade.
+  Consequently, every person working in computer animation uses them, and their multiplication is hard-wired into all
+  graphics chips in computers and cell phones.
+  My knowing this led to my collaborating with two applied mathematicians on a paper inspired by a problem in determining
+  the structure of a certain class of proteins, and then to one of my more influential papers in 20-teens.
   The last sections go into overdrive where he talks about the octonians.
-  Read them, but I did not assign exxercises from them.
+  Read them, but I did not assign exercises from them.
   <br><br>
 
   &nbsp; &nbsp;
-  This week is supposed to be a bit light, to give you more time to do research on your
+  This week is supposed to be a bit light, to give you more time to finish the draft of your
   <a href="../Term_paper.html">term paper</a>.
   </li>
 
@@ -70,17 +69,18 @@
 
  </li>
 
- <li><font color=maroon><b>Assignment:</b></font> due Monday, 18 April 2022. (HW 12)<br>
+ <li><font color=maroon><b>Assignment:</b></font> due Tuesday 9  April 2024. (HW 12)<br>
    Here is a <a href="../HW/HW12.pdf">.pdf</a> and a  <a href="../HW/HW12.tex">LaTeX source</a> of the assignment.<br>
+   <font color=magenta>No group assignment this week:</font> Between finishing the draft of you;r term paper and the
+   upcoming peer review, I want to go a bit lighter on you.
  <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
  
    <ol>
-     <li>Do exercises 19.1.2, 19.1.3, 19.1.4, and 19.1.5.  Each is a single-step deduction from the previous; I am hoping this is not too onerous.</li>
+     <li>Do exercises 19.1.2, 19.1.3, 19.1.4, and 19.1.5.  Each is a single-step deduction from the previous; I am hoping
+     this is not too onerous.</li> 
      <li>Also do exercise 19.3.6.</li>
-     <li>In Chapter 20, do the exercises 20.5.1, 20.5.2,  and 20.5.3. </li>
-<!--     <li>Pick one of the three readings from Bell, and compare Bell's story to what you find in Stillwell or on the web, such as
-     St. Andrew's mathematical biographies. (For Cayley, only on the web).
-     This is not to be a treatise, one longish or two shorter paragraphs should do.-->
+     <li>In Chapter 20, do the exercises 20.5.1, 20.5.2, 20.5.3,  and 20.5.4. </li>
+
   </ol>
  </li>
   
@@ -89,19 +89,6 @@
 <HR>
 <!-------------------------------------------------------------->
 <address></address>
-
-<!---------------------------------------------------------------------------->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12943815-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-<!---------------------------------------------------------------------------->
-<!-- hhmts start -->Last modified: Mon Apr 13 11:52:15 CDT 2020 <!-- hhmts end -->
 
 <p>Last modified: Thu Apr 21 15:56:27 CDT 2022 by sottile</p>
 
