--- a/teaching/24.1/weeks/W12.html
+++ b/teaching/24.1/weeks/W12.html
@@ -60,7 +60,9 @@
 
 <ol>
   <li>
-    Chapters 19 and 20 in Stillwell.
+    Chapters 19 and 20 in Stillwell.  Note that in Stillwell just after Exercise 20.5.3 there is a typo in the definition of the cross
+    product.
+    The last term is (<i>u</i><sub>1</sub> <i>v</i><sub>2</sub> - <i>u</i><sub>2</sub> <i>v</i><sub>1</sub>)<b>k</b>.
   </li>
  <!--  <li>
    Bell's Men on Mathematics Chapters on Galois, Cayley, and Hamilton.
