--- a/conferences/TAGS24/abstracts.html
+++ b/conferences/TAGS24/abstracts.html
@@ -160,19 +160,19 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><a name="MF"></a><font size=+1>Maria Fox</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>Ekedahl-Oort and Newton Stratifications</font></td>
+    <td><a name="MF"></a><font size=+1><s>Maria Fox</s></font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2><s>Ekedahl-Oort and Newton Stratifications</s></font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td colspan=2>  </td><td width=800 colspan=3>
-     We will discuss two important invariants of abelian varieties in characteristic <i>p</i>: the <i>p</i>-torsion subgroup and
+     <s>We will discuss two important invariants of abelian varieties in characteristic <i>p</i>: the <i>p</i>-torsion subgroup and
      the <i>p</i>-divisible group.
      Given a moduli space &Mscr; of abelian varieties in characteristic <i>p</i>, these two invariants can each be used to create a
      stratification of &Mscr;.
      We will see in several concrete examples that these two stratifications are very different, reflecting the fact that these two invariants
      capture very different attributes of the abelian varieties.
-     The new result in this talk is joint with D. Bhamidipati, H. Goodson, S. Groen, S. Nair, and E. Stacy. 
+     The new result in this talk is joint with D. Bhamidipati, H. Goodson, S. Groen, S. Nair, and E. Stacy. </s>
     <br> <br>
     </td>
   </tr>
