--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -53,8 +53,8 @@
                  Boston University  <br>
   &nbsp;  <a href="https://math.berkeley.edu/people/faculty/david-eisenbud">David Eisenbud</a>         &nbsp; 
                 University of California at Berkeley  <br>
-  &nbsp;  <a href="https://sites.google.com/view/mariafox/">Maria Fox</a>              &nbsp;
-                 Oklahoma State University  <br>
+  &nbsp; <s> <a href="https://sites.google.com/view/mariafox/">Maria Fox</a>              &nbsp;
+                 Oklahoma State University </s> <br>
   &nbsp;  <a href="http://alicialamarche.com/research">Alicia Lamarche</a>        &nbsp;
                  University of Utah  <br>
   &nbsp;  <a href="https://math.berkeley.edu/people/faculty/hannah-k-larson">Hannah Larson</a>          &nbsp;
@@ -183,7 +183,7 @@ early-career participants. Request this with your registration. <br>
   </tr> 
    <tr>
     <td> 9:00&ndash;9:55</td>
-   <td> Maria Fox </td><td><a href="abstracts.html#MF">Ekedahl-Oort and Newton Stratifications</a></td>
+   <td> <s>Maria Fox</s> </td><td><s><a href="abstracts.html#MF"></a>Ekedahl-Oort and Newton Stratifications</s></td>
   </tr> 
   <tr>
     <td> 10:00&ndash;10:15</td>
