--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
       I am teaching a distance course the Winter/Spring 2024 term and will divide my time between College Station, the Newton Institute in
       Cambridge and the Simons-Laufer Mathematics Institute in Berkeley.<br>
       
-      Samuel Sottile, my son and a Senior mathematics major at Michigan State University, was awarded a
-      2023&ndash;4
-      <a href="https://drive.google.com/file/d/1BPIvKT-nIQTXcYLDqkCyt-VEanbyGXE6/view">Churchill Scholarship</a>.
-      View the
-      <a href="https://msutoday.msu.edu/news/2023/msu-student-earns-churchill-scholarship">press release from MSU</a>.
-      I was a Churchill Scholar in 1985&ndash;6; Sam is the first Second-Generation Churchill Scholar.
+      Samuel Sottile, my son and current (2023&ndash;4, in Mathematics)
+      <a href="https://drive.google.com/file/d/1BPIvKT-nIQTXcYLDqkCyt-VEanbyGXE6/view">Churchill Scholar</a>,
+      was just awarded a National Science Foundation Graduate Fellowship that he will use at Stanford next year.<br>
+   
+      (We both graduated from Michigan State University, held Churchill Scholarships, and NSFGR Fellowships; he pips me on
+      being a Goldwater Scholar.)
       <br> 
 
       </td>
