--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -183,28 +183,24 @@ early-career participants. Request this with your registration. <br>
   </tr> 
    <tr>
     <td> 9:00&ndash;9:55</td>
-   <td> <s>Maria Fox</s> </td><td><s><a href="abstracts.html#MF"></a>Ekedahl-Oort and Newton Stratifications</s></td>
-  </tr> 
-  <tr>
-    <td> 10:00&ndash;10:15</td>
-    <td> Break </td><td></td>
-  </tr>
-   <tr>
-    <td>  10:15&ndash;11:10</td>
     <td> Alicia Lamarche </td><td><a href="abstracts.html#AL">Local-to-global principles for zero-cycles</a></td>
   </tr>
   <tr>
-    <td> 11:15&ndash;11:30</td>
+    <td> 10:00&ndash;11:30</td>
     <td> Break </td><td></td>
   </tr>
   <tr>
-    <td>  11:30&ndash;12:25</td>
+    <td>  10:30&ndash;11:25</td>
     <td> David Eisenbud </td><td><a href="abstracts.html#DE">Looking inside infinite resolutions</a></td>
   </tr>
 
   <tr>
-    <td>  12:30&ndash;12:35</td>
+    <td>  11:30&ndash;11:35</td>
     <td> Closing Remarks </td><td></td>
+  </tr>
+ <tr>
+     <td> 11:35&ndash;11:50</td>
+    <td>   Students meet with speakers </td><td></td>
   </tr>
 
 
